adding design on show

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -54,4 +54,20 @@ body{
 image{
   height: 10px;
 }
+.wrap2{
+  width: 34%;
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+}
+.wrap2 h2{
+  font-weight: bolder;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.main1{
+  background-color: #f5fafc;
+}
 
