--- a/app/views/restos/index.html.erb
+++ b/app/views/restos/index.html.erb
@@ -62,9 +62,17 @@
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
 </div>
+<%= image_tag "phone.png", style:'width:400px' %>
 </div>
 <div class="red">
-  
+<div class="reddiv">
+  <div class="card-body">
+    <h5 class="card-title">Get the app</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-sm" style="color:#ff6000;background:white">Submit</a>
+  </div>
 </div>
+</div>
+
 
 
