--- a/app/assets/stylesheets/restos.scss
+++ b/app/assets/stylesheets/restos.scss
@@ -11,14 +11,14 @@ link:hover{
 }
 .nav-item{
     padding-left: 60px;
-    font-size: 19px;
+    font-size: 14px;
     font-weight: normal;
 }
 .signup{
     background-color: #ff6000;
     color: white;
     font-weight: bold;
-    padding: 20px;
+    padding: 10px;
     padding-left:60px;
     padding-right: 60px;
     border-radius: 5px;
@@ -67,4 +67,47 @@ nav{
   width: 100%;
   height: 300px;
   background: #ff6000;
+}
+.reddiv{
+    width: 18rem;
+    float:right;
+    margin-top:50px;
+    margin-right:130px;
+    background:transparent;
+    color:white
+}
+.reddiv h5{
+    font-weight: bold;
+}
+.reddiv btn{
+  background: white;
+}
+.menus-info{
+  height: 670px;
+  width: 100%;
+  padding: 20px;
+}
+.info{
+    background-color: white;
+    width: 40%;
+    margin:40px;
+    padding: 20px;
+    float: left;
+    
+}
+.menu{
+    background-color: white;
+    width: 50%;
+    margin:20px;
+    padding: 20px;
+    float: right;
+
+}
+.menus-info h2{
+  color: #ff6000;
+  width: 80px;
+  font-weight: bolder;
+}
+.h2{
+    border-bottom: 2px solid #ff6000;
 }
