adding some missing design on footer

--- a/app/assets/stylesheets/restos.scss
+++ b/app/assets/stylesheets/restos.scss
@@ -111,3 +111,11 @@ nav{
 .h2{
     border-bottom: 2px solid #ff6000;
 }
+.btn-send{
+    background: #ff6000;
+}
+.vl {
+    border-left: 1px solid rgb(54, 55, 80);
+    height: 100%;
+  }
+ 
