--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Contact Us</h6>
+        <h3 class="text-uppercase mb-4 font-weight-bold">Contact Us</h3>
         <p>Tel:0787082914<br>
         E:yveshonore@gmail.com<br>
         A:kimihurura, Kigali
@@ -104,21 +104,44 @@
 
       <!-- Grid column -->
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-        <p>
-          <div class="row">
-            <div class="col-sm-6 form-group">
-              <input type="text" class="form-control" placeholder="Name">
-            </div>
-            <div class="col-sm-6 form-group">
-              <input type="email" class="form-control" placeholder="email">
-            </div>
-          </div>
-          <textarea class="form-control" placeholder="Message"></textarea>
-          <button class="btn btn-sm" style="float:right;background:#ff6000">Submit</button>
-        </p>
+        <div class="vl"></div>
         
       </div>
+
+      <form id="contact-form" method="post" action="contact.php" role="form">
+
+    <div class="messages"></div>
+
+    <div class="controls">
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Name" required="required" data-error="Firstname is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Email" required="required" data-error="Lastname is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Message" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <input type="submit" class="btn btn-send" style="background:#ff6000;float:right" value="Submit">
+            </div>
+        </div>
+    </div>
+
+</form>
       <!-- Grid column -->
 
     </div>
