--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,13 +35,10 @@
         </li>
         <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'New Restaurent', new_resto_path, :class => 'navbar-link',style:'color:black;text-decoration:none;font-weight:bolder;' %></i>
+          <%= link_to 'New Restaurent', new_resto_path, :class => 'navbar-link',style:'color:#bcbdbf;font-weight:bold' %></i>
         </li>
         <li class="nav-item">
-          <%= link_to 'New Menu', lunches_path, :class => 'navbar-link',style:'color:black;text-decoration:none;font-weight:bolder;padding-right:10px' %></i>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link',style:'color:black;text-decoration:none'  %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link',style:'color:red;text-decoration:none;font-weight:bold'  %>
         </li>
         <% else %>
         <li class="nav-item">
